# email_scan

./: README.md  pyproject.toml
src/email_scan/: crew.py  main.py
src/email_scan/config/: agents.yaml  tasks.yaml
